Bug 35064 - Incorrect import of curves from PDF into Draw
Summary: Incorrect import of curves from PDF into Draw
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
3.3.1 release
Hardware: x86 (IA32) All
: medium normal
Assignee: vvort
URL:
Whiteboard: Confirmed:4.2.0.1:OSX target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-06 09:25 UTC by tester8
Modified: 2014-04-11 11:15 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Testkit (79.41 KB, application/zip)
2011-03-06 09:27 UTC, tester8
Details
Original odt (20.95 KB, application/vnd.oasis.opendocument.text)
2011-12-29 12:21 UTC, tester8
Details
Exported pdf (24.66 KB, application/pdf)
2011-12-29 12:23 UTC, tester8
Details
Screenshot (24.94 KB, image/png)
2011-12-29 12:25 UTC, tester8
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tester8 2011-03-06 09:25:28 UTC
LibreOffice 3.3.1 RC2 (1:3.3.0-1lucid1) - Ubuntu 10.04 x86 Linux 2.6.32-28-generic Russian UI

Step to reproduce
1) Open square_root.odt and export it to pdf.
2) Import this pdf into LibreOffice
3) In Draw you will able to see brackets and part of root sign not at right place.

In attachment: original odt, pdf after export from Writer, pdf after export from Draw, Screenshot.
Comment 1 tester8 2011-03-06 09:27:49 UTC
Created attachment 44179 [details]
Testkit
Comment 2 Don't use this account, use tml@iki.fi 2011-03-06 23:43:03 UTC
Please, in the future just attach individual documents, no need to package them into a zip (or other) archive. That just makes it a little bit harder for a developer to investigate the bug.
Comment 3 Björn Michaelsen 2011-12-23 11:43:05 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 4 tester8 2011-12-29 12:21:48 UTC
Created attachment 54953 [details]
Original odt

LOdev 3.5.0beta2 
4ca392c-760cc4d-f39cf3d-1b2857e-60db978
Ubuntu 10.04.3 x86
Linux 2.6.32-37-generic Russian UI

Bug still present. What I see in Draw is wrong, but in different way.
Attached odt, exported pdf and screenshot.
Comment 5 tester8 2011-12-29 12:23:50 UTC
Created attachment 54954 [details]
Exported pdf
Comment 6 tester8 2011-12-29 12:25:06 UTC
Created attachment 54955 [details]
Screenshot
Comment 7 A (Andy) 2013-12-28 15:44:22 UTC
@Fridrich: Could this maybe be someting for you?
Comment 8 retired 2014-01-01 12:07:58 UTC
Confirmed:4.2.0.1:OSX
Comment 9 vvort 2014-02-22 07:41:34 UTC
Misaligned square root sign is not a curve - it's a _text_.
So the problem in importing of squeezed symbols.
Comment 10 vvort 2014-04-10 07:50:57 UTC
Fixed here:
https://gerrit.libreoffice.org/8916
Comment 11 Commit Notification 2014-04-11 11:14:50 UTC
Vort committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=54b8eb252a3380d9d6e3cec26463e7a257790651

fdo#35064 PDF Import: Add support for simple text scaling



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.