fdo#35064 PDF Import: Add support for simple text scaling

Change-Id: I81ff611f5f326c7ef97a75011cec4f4144d2cca4